Finalize v3 with updated HTML files

--- a/getBeltLevel.html
+++ b/getBeltLevel.html
@@ -22,5 +22,7 @@
         </div><br />
 
         <div id="beltLevelDisplay" class="message"></div>
+        <script src="https://cdn.jsdelivr.net/npm/web3@1.5.3/dist/web3.min.js"></script>
+        <script src="app.js"></script>
         </body>
         
