--- a/registerJudoka.html
+++ b/registerJudoka.html
@@ -21,5 +21,7 @@
             <input type="text" id="judokaAddress" class="input-field" placeholder="Enter judoka's wallet address"/>
             <button class="button" onclick="registerJudoka()">Register Judoka</button>
         </div><br />
+        <script src="https://cdn.jsdelivr.net/npm/web3@1.5.3/dist/web3.min.js"></script>
+        <script src="app.js"></script>
         </body>
         
