--- a/registerBlackBelt.html
+++ b/registerBlackBelt.html
@@ -24,5 +24,7 @@
             <button class="button" onclick="registerBlackBeltFromInput()">Register Black Belt</button>
         </div><br />
         <div id="beltLevelDisplay" class="message"></div>
+        <script src="https://cdn.jsdelivr.net/npm/web3@1.5.3/dist/web3.min.js"></script>
+        <script src="app.js"></script>
         </body>
         
