--- a/promoteJudoka.html
+++ b/promoteJudoka.html
@@ -29,6 +29,8 @@
             </select>
             <button class="button" onclick="promoteJudoka()">Promote Judoka</button>
         </div><br />
+        <script src="https://cdn.jsdelivr.net/npm/web3@1.5.3/dist/web3.min.js"></script>
+        <script src="app.js"></script>
 
         </body>
         
