Updated smart contract integration and front-end improvements

--- a/index.html
+++ b/index.html
@@ -4,20 +4,18 @@
     <title>Judo Belt System dApp</title>
 </head>
 <body>
-    <!-- Navigation Bar -->
-    <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="registerBlackBelt.html">Register Black Belt</a></li>
-            <li><a href="registerJudoka.html">Register Judoka</a></li>
-            <li><a href="promoteJudoka.html">Promote Judoka</a></li>
-            <li><a href="getBeltLevel.html">Get Belt Level</a></li>
-        </ul>
-    </nav>
-    
-    <div class="container" id="home">
-        <!-- ... rest of your existing code ... -->
-    </div>
+            <!-- Navigation Bar -->
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="registerBlackBelt.html">Register Black Belt</a></li>
+                    <li><a href="registerJudoka.html">Register Judoka</a></li>
+                    <li><a href="promoteJudoka.html">Promote Judoka</a></li>
+                    <li><a href="getBeltLevel.html">Get Belt Level</a></li>
+                    <li><a href="judokaProfile.html">Judoka Profile</a></li>
+                </ul>
+            </nav>
+
     <div class="container" id="home">
         <h1>Welcome to the Judo Belt System dApp</h1>
         <p>Explore the world of Judo like never before! Our decentralized application (dApp) brings efficiency and transparency to managing judo activities. From registering judokas to tracking their progress and achievements, our platform offers a comprehensive solution for practitioners, coaches, and enthusiasts alike.</p>
