--- a/promoteJudoka.html
+++ b/promoteJudoka.html
@@ -11,6 +11,7 @@
                     <li><a href="registerJudoka.html">Register Judoka</a></li>
                     <li><a href="promoteJudoka.html">Promote Judoka</a></li>
                     <li><a href="getBeltLevel.html">Get Belt Level</a></li>
+                    <li><a href="judokaProfile.html">Judoka Profile</a></li>
                 </ul>
             </nav>
         <!-- Promote Judoka Section -->
