--- a/registerJudoka.html
+++ b/registerJudoka.html
@@ -11,17 +11,35 @@
                     <li><a href="registerJudoka.html">Register Judoka</a></li>
                     <li><a href="promoteJudoka.html">Promote Judoka</a></li>
                     <li><a href="getBeltLevel.html">Get Belt Level</a></li>
+                    <li><a href="judokaProfile.html">Judoka Profile</a></li>
                 </ul>
             </nav>
-        <!-- Register Judoka Section -->
-        <div id="judokaRegistrationSection">
-            <label for="judokaName">Judoka's Name:</label>
-            <input type="text" id="judokaName" class="input-field" placeholder="Enter judoka's name"/>
-            <label for="judokaAddress">Judoka's Wallet Address:</label>
-            <input type="text" id="judokaAddress" class="input-field" placeholder="Enter judoka's wallet address"/>
-            <button class="button" onclick="registerJudoka()">Register Judoka</button>
-        </div><br />
-        <script src="https://cdn.jsdelivr.net/npm/web3@1.5.3/dist/web3.min.js"></script>
-        <script src="app.js"></script>
-        </body>
+    <!-- Register Judoka Section -->
+    <div id="judokaRegistrationSection">
+        <label for="judokaName">Judoka's Name:</label>
+        <input type="text" id="judokaName" class="input-field" placeholder="Enter judoka's name"/>
         
+        <label for="judokaAddress">Judoka's Wallet Address:</label>
+        <input type="text" id="judokaAddress" class="input-field" placeholder="Enter judoka's wallet address"/>
+
+        <label for="judokaDOB">Date of Birth (timestamp):</label>
+        <input type="number" id="judokaDOB" class="input-field" placeholder="Enter judoka's date of birth as timestamp"/>
+
+        <label for="judokaGender">Gender:</label>
+        <select id="judokaGender" class="input-field">
+            <option value="0">Male</option>
+            <option value="1">Female</option>
+        </select>
+
+        <label for="judokaEmail">Email:</label>
+        <input type="email" id="judokaEmail" class="input-field" placeholder="Enter judoka's email"/>
+
+        <label for="judokaPhone">Phone Number:</label>
+        <input type="tel" id="judokaPhone" class="input-field" placeholder="Enter judoka's phone number"/>
+
+        <button class="button" onclick="registerJudoka()">Register Judoka</button>
+    </div><br />
+
+    <script src="https://cdn.jsdelivr.net/npm/web3@1.5.3/dist/web3.min.js"></script>
+    <script src="app.js"></script>
+</body>
