Modified contracts and new front-end features

--- a/Front-end/registerBlackBelt.html
+++ b/Front-end/registerBlackBelt.html
@@ -13,6 +13,8 @@
                     <li><a href="promoteJudoka.html">Promote Judoka</a></li>
                     <li><a href="getBeltLevel.html">Get Belt Level</a></li>
                     <li><a href="judokaProfile.html">Judoka Profile</a></li>
+                    <li><a href="leaderBoards.html">Leaderboards</a></li>
+                    <li><a href="competitions.html">Competitions</a></li>
                 </ul>
             </nav>
         
