Updated competitions front-end and updated next-steps document

--- a/Front-end/competitions.html
+++ b/Front-end/competitions.html
@@ -44,6 +44,12 @@
         <button onclick="addParticipant()">Add Participant</button>
     </div>
 
+        <!-- Active Competitions Section -->
+    <div class="container" id="activeCompetitionsSection">
+        <h2>Active Competitions</h2>
+        <div id="activeCompetitionsDisplay"></div>
+    </div>
+
     <!-- Record Competition Result Section -->
     <div class="container" id="recordResultSection">
         <h2>Record Competition Result</h2>
