Changes to front-end

--- a/Front-end/registerBlackBelt.html
+++ b/Front-end/registerBlackBelt.html
@@ -27,7 +27,7 @@
         <input type="text" id="blackBeltAddress" class="input-field" placeholder="Enter black belt's wallet address"/>
 
         <label for="blackBeltDOB">Date of Birth (timestamp):</label>
-        <input type="number" id="blackBeltDOB" class="input-field" placeholder="Enter black belt's date of birth as timestamp"/>
+        <input type="text" id="blackBeltDOB" class="input-field" placeholder="Enter DOB as YYYYMMDD"/>
 
         <label for="blackBeltGender">Gender:</label>
         <select id="blackBeltGender" class="input-field">
