--- a/Front-end/registerJudoka.html
+++ b/Front-end/registerJudoka.html
@@ -25,7 +25,7 @@
         <input type="text" id="judokaAddress" class="input-field" placeholder="Enter judoka's wallet address"/>
 
         <label for="judokaDOB">Date of Birth (timestamp):</label>
-        <input type="number" id="judokaDOB" class="input-field" placeholder="Enter judoka's date of birth as timestamp"/>
+        <input type="text" id="judokaDOB" class="input-field" placeholder="Enter DOB as YYYYMMDD"/>
 
         <label for="judokaGender">Gender:</label>
         <select id="judokaGender" class="input-field">
