Updated smart contract and front-end with new registration data and pull for judoka profile

--- a/Front-end/registerBlackBelt.html
+++ b/Front-end/registerBlackBelt.html
@@ -29,6 +29,15 @@
         <label for="blackBeltDOB">Date of Birth (timestamp):</label>
         <input type="text" id="blackBeltDOB" class="input-field" placeholder="Enter DOB as YYYYMMDD"/>
 
+        <label for="blackBeltAge">Age:</label>
+        <input type="number" id="blackBeltAge" class="input-field" placeholder="Enter black belt's age"/>
+
+        <label for="blackBeltWeight">Weight:</label>
+        <input type="number" id="blackBeltWeight" class="input-field" placeholder="Enter black belt's weight"/>
+
+        <label for="blackBeltClub">Club:</label>
+        <input type="text" id="blackBeltClub" class="input-field" placeholder="Enter black belt's club"/>
+
         <label for="blackBeltGender">Gender:</label>
         <select id="blackBeltGender" class="input-field">
             <option value="0">Male</option>
