--- a/Front-end/registerJudoka.html
+++ b/Front-end/registerJudoka.html
@@ -27,6 +27,16 @@
         <label for="judokaDOB">Date of Birth (timestamp):</label>
         <input type="text" id="judokaDOB" class="input-field" placeholder="Enter DOB as YYYYMMDD"/>
 
+        <!-- Additional fields for Judoka Registration -->
+        <label for="judokaAge">Age:</label>
+        <input type="number" id="judokaAge" class="input-field" placeholder="Enter judoka's age"/>
+
+        <label for="judokaWeight">Weight:</label>
+        <input type="number" id="judokaWeight" class="input-field" placeholder="Enter judoka's weight"/>
+
+        <label for="judokaClub">Club:</label>
+        <input type="text" id="judokaClub" class="input-field" placeholder="Enter judoka's club"/>
+
         <label for="judokaGender">Gender:</label>
         <select id="judokaGender" class="input-field">
             <option value="0">Male</option>
