improved smart contract

--- a/Front-end/judokaProfile.html
+++ b/Front-end/judokaProfile.html
@@ -27,6 +27,8 @@
             <div id="judokaProfileDisplay">
                 <!-- Add elements to display judoka profile information -->
                 <p id="judokaNameDisplay"></p>
+                <p id="ageCategoryDisplay"></p>
+                <p id="weightCategoryDisplay"></p>
                 <!-- ... other elements for displaying profile info ... -->
             </div>
         </div>
