--- a/Front-end/registerJudoka.html
+++ b/Front-end/registerJudoka.html
@@ -17,40 +17,46 @@
                 </ul>
             </nav>
     <!-- Register Judoka Section -->
-    <div id="judokaRegistrationSection">
-        <label for="judokaName">Judoka's Name:</label>
-        <input type="text" id="judokaName" class="input-field" placeholder="Enter judoka's name"/>
-        
-        <label for="judokaAddress">Judoka's Wallet Address:</label>
-        <input type="text" id="judokaAddress" class="input-field" placeholder="Enter judoka's wallet address"/>
+<div id="judokaRegistrationSection">
+    <label for="judokaName">Judoka's Name:</label>
+    <input type="text" id="judokaName" class="input-field" placeholder="Enter judoka's name"/>
+    
+    <label for="judokaAddress">Judoka's Wallet Address:</label>
+    <input type="text" id="judokaAddress" class="input-field" placeholder="Enter judoka's wallet address"/>
 
-        <label for="judokaDOB">Date of Birth (timestamp):</label>
-        <input type="text" id="judokaDOB" class="input-field" placeholder="Enter DOB as YYYYMMDD"/>
+    <label for="judokaDOB">Date of Birth (YYYYMMDD):</label>
+    <input type="text" id="judokaDOB" class="input-field" placeholder="Enter DOB as YYYYMMDD"/>    
 
-        <!-- Additional fields for Judoka Registration -->
-        <label for="judokaAge">Age:</label>
-        <input type="number" id="judokaAge" class="input-field" placeholder="Enter judoka's age"/>
+    <label for="judokaGender">Gender:</label>
+    <select id="judokaGender" class="input-field">
+        <option value="0">Male</option>
+        <option value="1">Female</option>
+    </select>
 
-        <label for="judokaWeight">Weight:</label>
-        <input type="number" id="judokaWeight" class="input-field" placeholder="Enter judoka's weight"/>
+    <label for="judokaWeight">Weight:</label>
+    <input type="number" id="judokaWeight" class="input-field" placeholder="Enter judoka's weight"/>
 
-        <label for="judokaClub">Club:</label>
-        <input type="text" id="judokaClub" class="input-field" placeholder="Enter judoka's club"/>
+    <label for="judokaClub">Club:</label>
+    <input type="text" id="judokaClub" class="input-field" placeholder="Enter judoka's club"/>
 
-        <label for="judokaGender">Gender:</label>
-        <select id="judokaGender" class="input-field">
-            <option value="0">Male</option>
-            <option value="1">Female</option>
-        </select>
+    <button class="button" onclick="registerJudoka()">Register Judoka</button>
+</div>
+<br />
 
-        <label for="judokaEmail">Email:</label>
-        <input type="email" id="judokaEmail" class="input-field" placeholder="Enter judoka's email"/>
+<!-- Contact Details Update Section -->
+<div id="judokaContactUpdateSection">
+    <label for="judokaId">Judoka's ID:</label>
+    <input type="number" id="judokaId" class="input-field" placeholder="Enter judoka's ID"/>
 
-        <label for="judokaPhone">Phone Number:</label>
-        <input type="tel" id="judokaPhone" class="input-field" placeholder="Enter judoka's phone number"/>
+    <label for="judokaEmail">Email:</label>
+    <input type="email" id="judokaEmail" class="input-field" placeholder="Enter judoka's email"/>
 
-        <button class="button" onclick="registerJudoka()">Register Judoka</button>
-    </div><br />
+    <label for="judokaPhone">Phone Number:</label>
+    <input type="tel" id="judokaPhone" class="input-field" placeholder="Enter judoka's phone number"/>
+
+    <button class="button" onclick="updateJudokaContactDetails()">Update Contact Details</button>
+</div>
+
 
     <script src="https://cdn.jsdelivr.net/npm/web3@1.5.3/dist/web3.min.js"></script>
     <script src="app.js"></script>
