Updated nav bar, return judoka id when they register

--- a/Front-end/registerJudoka.html
+++ b/Front-end/registerJudoka.html
@@ -3,11 +3,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
         <body>
-            <!-- Navigation Bar -->
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="registerBlackBelt.html">Register Black Belt</a></li>
                     <li><a href="registerJudoka.html">Register Judoka</a></li>
                     <li><a href="promoteJudoka.html">Promote Judoka</a></li>
                     <li><a href="getBeltLevel.html">Get Belt Level</a></li>
@@ -41,8 +39,10 @@
 
     <button class="button" onclick="registerJudoka()">Register Judoka</button>
 </div>
-<br />
 
+<!-- Display Registered Judoka ID -->
+<div id="displayJudokaId" class="display-info"></div>
+<br>
 <!-- Contact Details Update Section -->
 <div id="judokaContactUpdateSection">
     <label for="judokaId">Judoka's ID:</label>
